# Pupwiki_geo_osm_US_pipeline

./: .env.example  .gitignore  Makefile  README.md  README_HOTFIX.md  pyproject.toml  requirements.txt
astro-integration/components/: MapLibrePlacesMap.astro  PlacesDataSourceNotice.astro  PlacesSearch.astro
astro-integration/routes/: README.md
cloudflare/: _headers  wrangler.r2.example.toml
configs/: datasets.generated.json  osm_dog_categories.json  pipeline.default.json  seo_thresholds.json
docs/: ARCHITECTURE.md  DATA_CONTRACT.md  DATA_SOURCES.md  GOOGLE_DRIVE_OSM.md  INPUT_FILES.md  LICENSING_ATTRIBUTION.md  PUPWIKI_INTEGRATION.md  QUALITY_AND_SEO.md  RUNBOOK.md  enrichment-update-runbook.md
docs/sources/: osm-license.html
examples/: sample-counties.geojson  sample-places.geojson  sample-states.geojson
legacy-packs/cloudflare-geo-pseo-pack/: 00_ARCHITECTURE_DECISION.md  01_DATA_MODEL.md  02_CLOUDFLARE_STORAGE_STRATEGY.md  03_PSEO_STRATEGY.md  04_LOCAL_ETL_PIPELINE.md  README.md
legacy-packs/cloudflare-geo-pseo-pack/astro/: PlacesDataSourceNotice.astro  (+2 more)
legacy-packs/dog-services-map-claude-code-pack/: README.md  RUN_ORDER.md  manifest.json
legacy-packs/offline-dataset-script-pack/: README.md
scripts/: convert_boundaries_to_geojson.py  run_full_pipeline.ps1  run_full_pipeline.sh  smoke_test.py  upload_r2.sh
src/pupwiki_geo/: build.py  categories.py  cli.py  compress.py  copy_public.py  downloads.py  drive.py  extract_osm.py  extract_osm.py.bak  jsonx.py  normalize.py  qa.py  spatial.py  text.py  unpack.py
tests/: test_slugify.py
(+37 files in other folders)
