[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pupwiki-geo-pipeline"
version = "0.1.0"
description = "PupWiki US dog services geo/OpenStreetMap ETL pipeline"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "tqdm>=4.66.0",
  "orjson>=3.10.0",
  "shapely>=2.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
pupgeo = "pupwiki_geo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
